fixed spacing

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -100,6 +100,10 @@ body {
   padding: 20px;
 }
 
+#paddingTop {
+  padding-top: 2rem;
+}
+
 //modal dropdowns
 @-webkit-keyframes animatetop {
   from {
